2002-03-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/.cvsignore: add xface2xbm

2002-03-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03130] w3mman.1
	* scripts/w3mman/.cvsignore: add w3mman.1
	* scripts/w3mman/Makefile (MAN_DIR): added
		(MAN_TARGETS): added
		(all): add $(MAN_TARGETS)
		(.in): replace @LIB_DIR@
		(install): install $(MAN_TARGETS)
		(uninstall): uninstall $(MAN_TARGETS)
		(clean): clean $(MAN_TARGETS)
	* scripts/w3mman/w3mman.1.in: added
	* scripts/w3mman/w3mman2html.cgi.in: undef $PAGER

2002-03-15  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03129] Re: X-Face
	* configure (use_xface): ask
	* fm.h (_Buffer): add header_source
	* buffer.c (reshapeBuffer): fix reshape when reading stdin with image
			fix disappearing header when reading stdin
	* file.c (xface2xbm): check file existence
	* file.c (readHeader): save to tmp file
			X-Face when activeImage & displayImage
	* main.c (dispI): comment out checking content type
	* main.c (stopI): ditto
	* scripts/xface2xbm.in: update compface URL
			read from file $XF
			write to file $XBM

2002-03-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* proto.h (readHeader): added

2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03127] X-Face
	* NEWS: X-Face support
	* configure (use_xface): added
	* config.h.dist (USE_XFACE): added
		(XFACE2XBM): added
	* file.c (xface2xbm): added
		(readHeader): X-Face: handling
	* scripts/Makefile (LIB_TARGETS): add xface2xbm
	* scripts/xface2xbm.in: added

2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03126] reshapeBuffer() and -m option
	* buffer.c (reshapeBuffer): fix reshapeBuffer() in case of -m option

2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03125] w3m -m < image
	* file.c (openGeneralPagerBuffer): use internal viewer for -m option

2002-03-13  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03116] Re: aligned block in <td align="center">